# clear-skies

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  fly.toml
.github/workflows/: deploy.yml
frontend/: index.html  package.json  vite.config.ts
frontend/src/: Try.svelte  main.ts  types.d.ts
frontend/src/lib/: Forecast.svelte  Report.svelte
frontend/src/openapi/: WeatherClient.ts  index.ts
frontend/src/openapi/models/: CanadaTz.ts  CardinalDirection.ts  Condition.ts  Coordinates.ts  CurrentConditions.ts  DailyForecast.ts  Day.ts  Error.ts  Forecast.ts  LocalDateTime.ts  Location.ts  LocationResultsPage.ts  ObservedAt.ts  Pressure.ts  PressureTendency.ts  ProvinceOrTerritory.ts  SpecialWeatherStatement.ts  Temperature.ts  TemperatureTrend.ts  WeatherReport.ts  Wind.ts  WindSpeed.ts
frontend/src/openapi/services/: DocumentationService.ts  LocationsService.ts  WeatherService.ts
weather-dev/: Cargo.toml
weather-dev/data/: coordinates.json  missing_timezones.json
weather-dev/src/: build_mapping.rs  extract_conditions.rs  fetch_feeds.rs  geocode.rs  main.rs
weather-lib/: Cargo.toml
weather-lib/src/: lib.rs
weather-lib/src/environment_canada/: mod.rs  weather_feed.rs
weather-lib/src/locations/: data.rs  mod.rs
weather-lib/src/weather_report/: current_conditions.rs  forecasts.rs  mod.rs  special_weather_statements.rs
weather-lib/src/weather_report/parsers/: common.rs  condition.rs  conditions.rs  mod.rs  pressure.rs  title.rs  wind.rs
weather-lib/src/weather_report/parsers/snapshots/: weather_lib__weather_report__parsers__condition__tests__conditions.snap  weather_lib__weather_report__parsers__conditions__tests__conditions.snap
weather-server/: Cargo.toml
weather-server/src/: location_search.rs  main.rs
weather-server/src/html/: index.html  swagger-ui.html
weather-server/src/static/assets/: try.css  try.js
weather-server/src/static/html/: index.html  swagger-ui.html
weather-sync/: Cargo.toml
weather-sync/src/: lib.rs
