[package]
name = "weather-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
deunicode = "1.3.3"
indoc = "2.0.1"
weather-lib = { path = "../weather-lib" }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls-native-roots"] }
tokio = { version = "1.26.0", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
scraper = "0.15.0"
clap = { version = "4.3.1", features = ["derive", "env"] }
