[package]
name = "weather-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
deunicode = "1.4.1"
indoc = "2.0.4"
weather-lib = { path = "../weather-lib" }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls-native-roots", "json"] }
tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt-multi-thread", "fs"] }
scraper = "0.18.1"
clap = { version = "4.4.8", features = ["derive", "env"] }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
