[package]
name = "weather-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.25", default-features = false, features = ["std", "clock", "serde"] }
chrono-tz = "0.8.2"
color-eyre = "0.6.2"
html-escape = "0.2.13"
nom = "7.1.3"
quick-xml = { version = "0.28.0", features = ["serialize"] }
schemars = { version = "0.8.12", features = ["chrono"] }
scraper = "0.15.0"
serde = { version = "1.0.156", features = ["derive"] }
