[package]
name = "weather-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["std", "clock", "serde"] }
chrono-tz = "0.8.4"
color-eyre = "0.6.2"
html-escape = "0.2.13"
nom = "7.1.3"
quick-xml = { version = "0.31.0", features = ["serialize"] }
schemars = { version = "0.8.12", features = ["chrono"] }
scraper = "0.18.1"
serde = { version = "1.0.192", features = ["derive"] }
