[package]
name = "weather-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "serde",
] }
chrono-tz = "0.10.0"
color-eyre = "0.6.3"
html-escape = "0.2.13"
nom = "7.1.3"
quick-xml = { version = "0.37.0", features = ["serialize"] }
schemars = { version = "0.8.21", features = ["chrono"] }
scraper = "0.21.0"
serde = { version = "1.0.214", features = ["derive"] }

[dev-dependencies]
insta = "1.39.0"
