[package]
name = "weather-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive", "env"] }
color-eyre = "0.6.2"
dropshot = "0.9.0"
http = "0.2.9"
hyper = "0.14.26"
rust-embed = "6.8.1"
schemars = "0.8.12"
serde = { version = "1.0.163", features = ["derive", "rc"] }
serde_json = "1.0.96"
tantivy = "0.20.2"
tokio = { version = "1.28.2", default-features = false, features = ["macros", "rt-multi-thread", "rt"] }
weather-lib = { path = "../weather-lib" }
weather-sync = { path = "../weather-sync" }
