[package]
name = "weather-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["std", "clock", "serde"] }
color-eyre = "0.6.2"
http = "0.2.9"
http-cache-semantics = { version = "1.0.1", default-features = false, features = ["reqwest"] }
moka = { version = "0.11.1", features = ["future"] }
nom = "7.1.3"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls-native-roots", "gzip"] }
tokio = { version = "1.28.2", default-features = false, features = ["sync"] }
weather-lib = { path = "../weather-lib" }
